--- a/style.css
+++ b/style.css
@@ -1,1 +1,20 @@
+body {
+    margin: 0 100px;
+}
 
+.header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+ul {
+    list-style: none;
+    display: flex;
+    gap: 16px;
+}
+
+a {
+    text-decoration: none;
+    color: grey;
+}
