--- a/style.css
+++ b/style.css
@@ -48,3 +48,15 @@ a {
     border: none;
     border-radius: 4px;
 }
+
+.section-two {
+    text-align: center;
+    padding: 70px 100px;
+}
+
+.card-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 48px;
+}
