--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
     /* margin: 0 100px; */
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .header {
@@ -51,12 +52,32 @@ a {
 
 .section-two {
     text-align: center;
-    padding: 70px 100px;
+    margin: 70px 100px;
 }
 
 .card-container {
     display: flex;
-    align-items: center;
+    align-items: baseline;
     justify-content: center;
     gap: 48px;
+    flex-wrap: wrap;
+}
+
+.section-two-title {
+    margin: 0 0 70px 0;
+    font-size: 32px;
+    color: rgb(30, 30, 30);
+}
+
+.first-win,
+.second-win,
+.third-win,
+.fourth-win,
+.fifth-win {
+    border: 3px solid rgb(30, 30, 30);
+    border-radius: 4px;
+}
+
+.info {
+    max-width: 150px;
 }
