--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
+* {
+    /* border: 1px solid green; */
+}
+
 body {
-    /* margin: 0 100px; */
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -52,7 +55,7 @@ a {
 
 .section-two {
     text-align: center;
-    margin: 70px 100px;
+    padding: 70px 100px;
 }
 
 .card-container {
@@ -80,4 +83,28 @@ a {
 
 .info {
     max-width: 150px;
+}
+
+.section-three {
+    padding: 70px 100px;
+    background-color: red;
+}
+
+.quote-container {
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    max-width: 700px;
+}
+
+.quote-text {
+    color: yellow;
+    font-size: 24px;
+    font-style: italic;
+}
+
+.name {
+    text-align: right;
+    font-size: 18px;
+    font-weight: 700;
 }
