--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 
 body {
     font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
 }
 
 .header {
@@ -98,7 +99,7 @@ a {
 }
 
 .quote-text {
-    color: yellow;
+    color: white;
     font-size: 24px;
     font-style: italic;
 }
@@ -107,4 +108,40 @@ a {
     text-align: right;
     font-size: 18px;
     font-weight: 700;
+}
+
+.section-four {
+    padding: 70px 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.section-four-container {
+    color: white;
+    background-color: rgb(30, 30, 30);
+    border-radius: 4px;
+    width: 500px;
+    padding: 16px 80px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.sign-title {
+    font-size: 20px;
+    font-weight: 700;
+    margin-bottom: 5px;
+}
+
+.section-four-text {
+    font-size: 14px;
+}
+
+.section-four-button {
+    padding: 4px 16px;
+    color: white;
+    background-color: rgb(30, 30, 30);
+    border: 2px solid red;
+    border-radius: 4px;
 }
