--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-* {
-    /* border: 1px solid green; */
-}
-
 body {
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
@@ -144,4 +140,12 @@ a {
     background-color: rgb(30, 30, 30);
     border: 2px solid red;
     border-radius: 4px;
+}
+
+.footer {
+    text-align: center;
+    background-color: rgb(30, 30, 30);
+    color: white;
+    font-size: 12px;
+    padding: 16px 0;
 }
