--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@ button {
     justify-content: space-between;
     padding: 0 5%;
     background-color: white;
+    border-bottom: 3px solid red;
 }
 
 .logo {
@@ -26,6 +27,7 @@ button {
 }
 
 ul {
+    padding: 0;
     list-style: none;
     display: flex;
     gap: 24px;
@@ -172,6 +174,49 @@ a {
 }
 
 .footer {
+    text-align: center;
+    background-color: rgb(30, 30, 30);
+    color: white;
+    font-size: 12px;
+    padding: 16px 0;
+}
+
+
+/* ABOUT PAGE */
+
+.about-section {
+    display: flex;
+    justify-content: center;
+}
+
+.about-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 3%;
+    margin: 50px 8%;
+    background-color: rgb(30, 30, 30);
+    border: 3px solid red;
+    border-radius: 30px;
+    width: 100%;
+    max-width: 500px;
+}
+
+.about-title {
+    font-size: 32px;
+    color: white;
+    margin: 0 0 10px 0;
+}
+
+.about-text {
+    margin: 8px 0;
+    color: white;
+    max-width: 500px;
+    text-indent: 20px;
+}
+
+.about-footer {
     text-align: center;
     background-color: rgb(30, 30, 30);
     color: white;
